# AI-Reviewer-Replication-Package

./: .gitignore  LICENSE  LICENSE-DATA.md  README.md  THIRD-PARTY-NOTICES.md  pyproject.toml  requirements.txt  run_experiment.py
conf/: config.yaml
conf/data/: code_first.yaml  default.yaml  frontier_bad.yaml  frontier_good.yaml  good_70b.yaml  mitig_diffonly_bad.yaml  mitig_diffonly_good.yaml  mitig_instruction_bad.yaml  mitig_instruction_good.yaml  mitig_terse_bad.yaml  mitig_terse_good.yaml  phase8.yaml  phase8_code_first.yaml  phase8_good.yaml  phase8_problems_first.yaml  problems_first.yaml
conf/experiment/: code_first.yaml  default.yaml  mitig_diffonly.yaml  mitig_instruction.yaml  mitig_terse.yaml  problems_first.yaml
conf/model/: claude_sonnet.yaml  gemma2_9b.yaml  llama3_1_8b.yaml  llama3_70b.yaml  qwen2_5_14b.yaml  qwen2_5_32b.yaml  qwen2_5_3b.yaml  qwen2_5_72b.yaml  qwen2_5_7b.yaml
data/goodpatches/: audit.csv  good_diff_implementation_notes.csv  tracker.csv  tracker_2026-06-14.csv
protocols/: FRONTIER-PLAN.md  JUDGE-PROTOCOL.md  MITIGATION-PLAN.md  PATCH-VALIDATION.md  PROTOCOL.md
results/: good_verdicts.csv  verdicts.csv
slurm/: analyze.sbatch  analyze_mitigation.sh  bug_question.sbatch  launch_mitigation.sh  run_array.sbatch  run_experiment.sbatch
src/: analyze.py  api_reviewer.py  bug_question_analysis.py  code_first_analysis.py  figures.py  judge_detection.py  make_validation_sample.py  mitigation_analysis.py  patches.py  problems_first_analysis.py  regression.py  reviewer.py  sdt.py  vague_rejection_test.py  validate.py
(+551 files in other folders)
