[project]
name = "pr-framing"
version = "0.1.0"
description = "Does the AI reviewer judge the code or the story? A controlled study of PR framing effects."
requires-python = ">=3.10"
dependencies = [
    # Install torch FIRST with the CUDA build on a GPU-visible node:
    # pip install torch --index-url https://download.pytorch.org/whl/cu124
    "torch",
    "transformers>=4.45,<5",  # v5 removed the load_in_4bit/torch_dtype kwargs used in src/reviewer.py
    "accelerate>=0.34",
    "bitsandbytes",           # for load_in_4bit support
    "hydra-core==1.3.2",
    "omegaconf",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipykernel",
    "jupyter",
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
